--- a/assets/projects.json
+++ b/assets/projects.json
@@ -85,7 +85,7 @@
     "Descrizione": "An interactive experience narrating the relationship between humans and parakeets in the online market through the symbolic element of the hand.<br><br>The focus is on monk and ring-necked parakeets, non-migratory species native to South America, imported into Italy for their exotic charm. Some escaped captivity, forming urban colonies, while human demand continues to drive their online trade. To investigate this phenomenon, 885 listings from 15 online platforms—including Facebook, Telegram, and Subito.it—were analyzed between November 1st and 5th, 2024. Among them, 114 listings featured photographs where humans were visible through the presence of a hand. These listings were grouped into seven collections based on how the hand interacts with the parakeet.<br>By comparing the images with their descriptions, the study explores the significance of these interactions, revealing how the birds are perceived and treated. In the interactive experience, users can explore these collections and engage directly with the data through the movement of their own hand, which becomes both a metaphor for the human–parakeet relationship and a tool to engage firsthand with the role of humansin this phenomenon.<br><br>The experience consists of a web application built using Three.js and Mediapipe Hand Landmark detection algorithm, a machine-learning solution developed by Google for hand recognition.<br><br>The project was showcased at the MEET Digital Culture Center in Milan as part of a two-week exhibition entitled <a href='https://liked-trapped-shared.densitydesign.org/en' >Liked Trapped Shared.</a>",
     "Fields": "Data visualization, creative coding",
     "Team": "Giulia Grassi<br>Ming Hu<br>Nausicaa Naibo<br>Fabio Pennone<br>Anita Ruggiu",
-    "Context": "Final Synthesis Studio<br>Master in Communication Design<br>Politecnico di Milano",
+    "Context": "Final Synthesis Studio, Master in Communication Design, Politecnico di Milano",
     "Media": [
       {
         "type": "image",
@@ -137,8 +137,8 @@
     "Nome": "INATTO",
     "Descrizione": "An independent magazine written by creatives for creatives with the aim of opening a discussion on the needs of those who belong to the field.</br><br>Rights, after all, are not only those recognized by law. Often we behave as if we had permission to act in a certain way, even if formally that right does not exist. The collaboration between multiple individuals, even when involuntary, can legitimize such behaviors, even when authorities do not recognize them. Lying, destroying, failing, forgetting, copying. Are these wrong behaviors, or is it our perception that is wrong?</br></br>The magazine is law while each issue is a new right, legitimized through the words of the people who contributed to the creation magazine itself. The magazine aims to be a place for dialogue between different points of view, with the purpose of questioning those taboos that prevent the creative system from evolving. Each issue features a gallery of artworks donated by several artists that decide to contibute to the issue of the magazine.</br></br>Visit the <a href='https://inattomag.it/index.html'>website</a> with the open-source artworks to discover those of the first issue, 'The right to Copy'.",
     "Fields": "Editorial design",
-    "Team": "Miguel Amaya<br>Ginevra Bernasconi <br>Giulia Bonalumi <br>Federico Gajo <br>Camilla Tosi",
-    "Context": "Complex Artifacts Studio<br>Bachelor in Communication Design<br>Politecnico di Milano",
+    "Team": "Miguel Amaya<br>Ginevra Bernasconi<br>Giulia Bonalumi<br>Federico Gajo<br>Camilla Tosi",
+    "Context": "Complex Artifacts Studio, Bachelor in Communication Design, Politecnico di Milano",
     "Media": [
       {
         "type": "image",
@@ -228,7 +228,7 @@
     "Descrizione": "An app to ‘collect’ the dogs that you meet during your daily walk in the Dog Area in Parco Sempione, encouraging socialisation and education between dog-owners.<br><br>The app allows you to create a card of your four-legged friend and share it with others.</br>‘Waggle’ is not only the name of the app, but also the core interaction: users are invited to wave their phones toward each other—just like dogs wag their tails when they’re happy to meet. The app thus connects human and dog behavior through a playful gesture that encourages connection and community. It links humans to dogs interaction as people are invited to wave their phone to the other person as if they were shaking their tail happy to meet them.</br>The entire visual identity is based on a consistent pixel grid, used throughout the interface, including a pixelated reinterpretation of Parco Sempione’s Dog Area, grounding the experience in its real-world, local context.</br></br>Visit the <a href='https://github.com/martinaesposito/03-WAGGLE'>github repository</a> for the source code or test the experience on the <a href='https://waggle.onrender.com'>demo website</a>!",
     "Fields": "Creative coding",
     "Team": "Andrea Brolatti<br>Marco Convento<br>Anita Ruggiu",
-    "Context": "Interaction Studio C2<br>Master in Communication Design<br>Politecnico di Milano",
+    "Context": "Interaction Studio C2, Master in Communication Design, Politecnico di Milano",
     "Media": [
       {
         "type": "image",
@@ -389,7 +389,7 @@
     "Descrizione": "A web experience to find your soulmate using only 1-bit messages.<br><br>The aim is to show the language behind online communication, making fun of the numerous apps that nowadays claim to find us our true love. These technologies use human language to obtain a digital connection, while N01 does the opposite: the website makes us look for each other communicating digitally but physically connecting.<br>At the heart of the experience is the search for the match assigned by the platform. To find their soulmate, users have to figure out which device is playing a sound each time they tap their screen. When the two persons finally meet they have to scan each other's devices to generate an artwork composed of the bits of communication sent during the whole experience. This piece can then be saved as a personal memory of their match or viewed alongside all the other experiences collected in the gallery.<br><br><a href='https://n01.onrender.com/'>Find your soulmate</a> or browse the <a href='https://github.com/drawwithcode/2022-group-project-group05?tab=readme-ov-file'>Github repository</a> to learn more about the code behind the experience.",
     "Fields": "Creative coding",
     "Team": "Elisa De Benedettis <br>Davide Agostinelli <br>Giulia Gnessi",
-    "Context": "Creative coding, Bachelor in Communication Design, Politecnico di Milano",
+    "Context": "Creative Coding, Bachelor in Communication Design, Politecnico di Milano",
     "Media": [
       {
         "type": "image",
@@ -490,7 +490,7 @@
     "Cover": "full",
     "Anno": "2023",
     "Nome": "Un'estate",
-    "Descrizione": "A photographic book, printed in risograph and screen printing, made by a group of non-designers during a course at the CFP Bauer Foundation.<br><br>The most challenging but beautiful aspect of this work was the cooperation with people that don’t belong to the design field and were new to these kinds of projects. Working together the group took care of every aspect: from the making and printing of the pictures, to the cutting, folding and binding of the signatures. <br>Most of the book is printed in a risograph using black and red, except for a signature printed in four colors. For the last twelve pages, each of the participants drew an illustration related to the theme of the project and impressed it in screen-printing. The book was then bound by hand using the kettle stitch technique.",
+    "Descrizione": "A photographic book, printed in risograph and screen printing, made by a group of non-designers during a course at the CFP Bauer Foundation.<br><br>The most challenging but beautiful aspect of this work was the cooperation with people that don’t belong to the design field and were new to these kinds of projects. Working together as a group we took care of every aspect: from the making and printing of the pictures, to the cutting, folding and binding of the signatures.<br>Most of the book is printed in a risograph using black and red, except for a signature printed in four colors. For the last twelve pages, each of the participants drew an illustration related to the theme of the project and impressed it in screen-printing.</br>The book was then bound by hand using the kettle stitch technique.",
     "Fields": "Editorial design",
     "Team": "Cesare Lorenzo <br>Laura Bagnera <br>Flavia Chornobai <br>Camilla Vaghi <br>Agnese Costanzo <br>Simone Croci <br>Giorgia Del Giudice <br>Chiara Carapellese <br>Giulia Velardo",
     "Context": "CFP Bauer",
@@ -561,7 +561,7 @@
     "Descrizione": "A drawing platform designed for kids to make them interact with digital devices in unusual ways.<br><br>By rotating the phone the player draws a line that changes tint each time it hits one of the colored dots spread all over the arena.</br>The platform was developed both for desktop and mobile using P5js, a javascript and processing library designed to make generative art and creative coding sketches.</br></br><a href='https://martinaesposito.github.io/DRAWING-ARENA/'>Play the game</a> or visit the <a href='https://github.com/martinaesposito/DRAWING-ARENA'>github repository</a> for the source code.",
     "Fields": "Creative coding",
     "Team": "",
-    "Context": "Creative coding, Bachelor in Communication Design, Politecnico di Milano",
+    "Context": "Creative Coding, Bachelor in Communication Design, Politecnico di Milano",
     "Media": [
       {
         "type": "image",
@@ -687,7 +687,7 @@
     "Descrizione": "An interactive guide for non-designers explaining the design principles behind a wayfinding system.<br><br>Despite the amount of information, the book isn’t a theoretical manual and asks the reader to parti- cipate actively. The readers start from the first chapter, in which the design principles are explained and then navigate through the other pages to learn and observe how they are applied to some real cases. While navigating the book, they must also attach the stickers of the design principles best displayed by the example in the proper spaces at the corner of the pages. To prove the effectiveness of street signs in conditions of rough visibility, sheets simulating weather conditions, such as fog or darkness, are placed at the end of the book. When the readers encounter those particular examples they can insert the cards in the appropriate pockets and confirm their effectiveness.",
     "Fields": "Editorial design",
     "Team": "Andrea Borsato <br>Anita Ruggiu",
-    "Context": "Studio of design fundamentals, Bachelor in Communication Design, Politecnico di Milano",
+    "Context": "Studio of design fundamentals</br>Bachelor in Communication Design</br>Politecnico di Milano",
     "Media": [
       {
         "type": "image",
