--- a/assets/projects.json
+++ b/assets/projects.json
@@ -756,7 +756,7 @@
     "Cover": "large",
     "Anno": "2022",
     "Nome": "Calendario 2022",
-    "Descrizione": "A series of twelve digital illustrations representing a table at breakfast time realized for the 2022 calendar.<br><br>Each month is presented as a still life of a table at breakfast time, returning the feeling of that particular period of the year by combining seasonal food with different lights and shades of color. Though the habit of breakfast hasn’t got anything artistic in itself, it can become a moment of care and beauty to start the day in a different mood.</br></br>For this project, <a href='https://brillomagazine.it/la-bellezza-del-quotidiano-nelle-illustrazioni-di-martina-esposito/?lang=it'>I was interviewed by an Italian magazine of illustration called Brillo</a>.",
+    "Descrizione": "A series of twelve digital illustrations representing a table at breakfast time, created for the 2022 calendar.<br><br>Each month is depicted as a still life of a breakfast setting, capturing the essence of that particular time of year by combining seasonal foods with varying lights and color shades. While the act of having breakfast may not inherently possess artistic qualities, it can become a moment of care and beauty to start the day in a different mood. By pairing dissonant colors with intimate yet natural compositions, I aimed to create atmospheres charged with a subtle, almost surreal tension, inviting viewers to rediscover the simple beauty of the everyday.</br></br>For this project, I was <a href='https://brillomagazine.it/la-bellezza-del-quotidiano-nelle-illustrazioni-di-martina-esposito/?lang=it'>interviewed</a> by an Italian magazine of illustration called Brillo.",
     "Fields": "Illustration",
     "Team": "",
     "Context": "Personal project",
