--- a/assets/projects.json
+++ b/assets/projects.json
@@ -431,7 +431,7 @@
     "Cover": "contain",
     "Anno": "2024",
     "Nome": "Self representation",
-    "Descrizione": "A series of analog photographic prints exploring the theme of self-representation.<br><br>Through the lens of the camera, the image of the person detaches from its identity and becomes a shape against a background, a part of a new bidimensional reality. By playing both in the studio and in the dark room, frames of different body parts were used to recreate iconic pictures of photographers such as Bill Brandt and Robert Mapplethorpe. The work proceeded by trial and error, exploring the possibility that the medium itself of photography could offer. The final prints were bound into a book while all the attempts and the experiments relative to the process were collected into a separate notebook.",
+    "Descrizione": "A series of analog photographic prints exploring the theme of self-representation.<br><br>Through the lens of the camera, the image of the person detaches from its identity and becomes a shape against a background, a part of a new bidimensional reality. The project began as an attempt to recreate landscapes through close-up shots of body parts, but gradually evolved into a broader investigation of how the body, once framed, can generate something entirely other than itself. The work proceeded by trial and error, exploring the possibilities offered by analog photography and darkroom processes, such as multiple exposures and masking areas of the image during development.</br></br>By playing both in the studio and in the dark room, frames of different body parts were used to reinterpret iconic pictures of artists such as Bill Brandt and Robert Mapplethorpe. The final prints were bound into a book, while all the attempts, sketches, and technical experiments were gathered into a separate notebook, documenting the process as a key part of the work itself.",
     "Fields": "Photography",
     "Team": "",
     "Context": "Personal project",
@@ -588,7 +588,7 @@
     "Cover": "contain",
     "Anno": "2024",
     "Nome": "Craftwork",
-    "Descrizione": "",
+    "Descrizione": "Web design and visual effect for the website of a research project by the Department of Social and Political Sciences of the University of Milan.</br>The project is a multi-methodological investigation into the relationship between identity and “new forms of work” in the digital era, exploring how technological transformation is reshaping professional life across various sectors and geographic contexts within the EU. Visit the <a href='https://craftwork.unimi.it/'>website</a> to learn more about the research.</br></br>In addition to designing and developing the website, I created a custom image-processing tool that simulates a Risograph printing effect, bringing a distinctive editorial quality to the project’s visual identity. The <a href='https://github.com/martinaesposito/TOOL-RISO'>tool</a> was developed using the P5.riso library and is freely accessible for everyone to use.",
     "Fields": "Creative coding",
     "Team": "",
     "Context": "Andrea Benedetti",
@@ -617,12 +617,6 @@
         "type": "image",
         "src": "3.webp",
         "layout": "full"
-      },
-      {
-        "type": "image",
-        "src": "4.webp",
-        "layout": "contain",
-        "height": 50
       }
     ]
   },
@@ -687,7 +681,7 @@
     "Descrizione": "An interactive guide for non-designers explaining the design principles behind a wayfinding system.<br><br>Despite the amount of information, the book isn’t a theoretical manual and asks the reader to parti- cipate actively. The readers start from the first chapter, in which the design principles are explained and then navigate through the other pages to learn and observe how they are applied to some real cases. While navigating the book, they must also attach the stickers of the design principles best displayed by the example in the proper spaces at the corner of the pages. To prove the effectiveness of street signs in conditions of rough visibility, sheets simulating weather conditions, such as fog or darkness, are placed at the end of the book. When the readers encounter those particular examples they can insert the cards in the appropriate pockets and confirm their effectiveness.",
     "Fields": "Editorial design",
     "Team": "Andrea Borsato <br>Anita Ruggiu",
-    "Context": "Studio of design fundamentals</br>Bachelor in Communication Design</br>Politecnico di Milano",
+    "Context": "Studio of design fundamentals, Bachelor in Communication Design, Politecnico di Milano",
     "Media": [
       {
         "type": "image",
